--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,38 @@
     <!-- PON UN FAVICON!!! -->
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&display=swap" rel="stylesheet" />
     <!-- CAMBIA EL TITLE!!! -->
     <title>Vite Template</title>
   </head>
   <body>
-    <p class="text">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit cumque, quis est culpa aspernatur reiciendis nisi
-      doloribus nostrum cum a quasi corrupti asperiores porro nam recusandae impedit quod aliquid aperiam?<span
-        >HOLA</span
-      >
-    </p>
+    <header class="header">
+      <img class="logo" src="./assets/images/logo-dark-theme.svg" alt="" />
+      <div class="icon-container">
+        <img src="./assets/images/icon-sun.svg" alt="" />
+      </div>
+    </header>
+    <main class="main">
+      <h1 class="title">Analyze your text in real-time.</h1>
+      <textarea class="text-area" id="textarea"></textarea>
+      <input type="checkbox" id="exclude-spaces" class="exclude-spaces" />
+      <label for="exclude-spaces">Exclude Spaces</label>
+      <p id="reading-time">Approx. reading time:</p>
+      <div class="card card-total-characters">
+        <span id="total-characters" class="card-counter">00</span>
+        <p>Total Characters</p>
+      </div>
+      <div class="card card-word-count">
+        <span id="word-count" class="card-counter">00</span>
+        <p>Word Count</p>
+      </div>
+      <div class="card card-sentence-count">
+        <span id="sentence-count" class="card-counter">00</span>
+        <p>Sentence Count</p>
+      </div>
+    </main>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
